--- a/Companion/app/src/main/res/values/strings.xml
+++ b/Companion/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Companion</string>
     <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
     <string name="a_title">Authentication</string>
-    <string name="authenticate">Enter the 4 digit PIN or just tap the fingerprint sensor with your registered fingerprint</string>
+    <string name="authenticate">Enter the 4 digit PIN or just tap the FINGERPRINT SENSOR with your registered fingerprint to authenticate</string>
     <string name="pin">Enter the PIN</string>
     <string name="or">OR</string>
     <string name="dialog_message">You have not signed up with us yet. Please register on our website before using this application</string>
